--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.136.1",
     "classnames": "^2.3.1",
     "framer-motion": "^5.6.0",
+    "framer-motion-3d": "^6.0.0-alpha.1",
     "next": "^12.0.8",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
