--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.0.8",
-    "@react-three/drei": "^8.4.0",
-    "@react-three/fiber": "^7.0.24",
     "@types/next-seo": "^2.1.2",
-    "@types/three": "^0.136.1",
     "classnames": "^2.3.1",
     "framer-motion": "^5.6.0",
     "framer-motion-3d": "^6.0.0-alpha.1",
@@ -21,10 +18,10 @@
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.48.0",
-    "three": "^0.136.0"
+    "sass": "^1.48.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "eslint": "^8.6.0",
